fix TreeUI should be accessed only from EDT